--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember</h2>
-
+<div class="container">
+  <div class="page-header">
+  <h2 id="title">Welcome to the Beat Lab!</h2>
+  {{#link-to "bands"}}Bands{{/link-to}}
+  </div>
+</div>
 {{outlet}}
